err/unimr.compositeindex.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher/tests'...
Listing './lib/python3.5/site-packages/collective.monkeypatcher-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unimr'...
Listing './lib/python3.5/site-packages/unimr/compositeindex'...
Compiling './lib/python3.5/site-packages/unimr/compositeindex/CompositeIndex.py'...
***   File "./lib/python3.5/site-packages/unimr/compositeindex/CompositeIndex.py", line 85
    raise RuntimeError,"operator not valid: %s" % escape(operator)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/unimr/compositeindex/dtml'...
Listing './lib/python3.5/site-packages/unimr/compositeindex/help'...
Compiling './lib/python3.5/site-packages/unimr/compositeindex/tests.py'...
***   File "./lib/python3.5/site-packages/unimr/compositeindex/tests.py", line 137
    print "atomic:    %s hits in %3.2fms" % (len(res1), (time() -st)*1000)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/unimr/compositeindex/wrapper.py'...
***   File "./lib/python3.5/site-packages/unimr/compositeindex/wrapper.py", line 53
    raise ValueError, ('Trying to unwrap non-wrapped '
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/unimr/compositeindex/www'...
Listing './lib/python3.5/site-packages/unimr.compositeindex-0.1rc1.post84937.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
